--- a/Nova/Info.plist
+++ b/Nova/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>Nova securely stores menstrual data in Health that you enter into the app.</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Nova reads data from Health to generate graphs and historical statistics.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
