Fix watch saving + add test target

--- a/Nova.xcodeproj/xcshareddata/xcschemes/Nova.xcscheme
+++ b/Nova.xcodeproj/xcshareddata/xcschemes/Nova.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E98783642689186000CCC908"
+               BuildableName = "NovaTests.xctest"
+               BlueprintName = "NovaTests"
+               ReferencedContainer = "container:Nova.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
