--- a/Nova.xcodeproj/xcshareddata/xcschemes/NovaWatch.xcscheme
+++ b/Nova.xcodeproj/xcshareddata/xcschemes/NovaWatch.xcscheme
@@ -64,10 +64,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Nova">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E976174B252EA6310011B715"
@@ -75,7 +73,7 @@
             BlueprintName = "NovaWatch"
             ReferencedContainer = "container:Nova.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -83,10 +81,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Nova">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E976174B252EA6310011B715"
@@ -94,16 +90,7 @@
             BlueprintName = "NovaWatch"
             ReferencedContainer = "container:Nova.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E976174B252EA6310011B715"
-            BuildableName = "NovaWatch.app"
-            BlueprintName = "NovaWatch"
-            ReferencedContainer = "container:Nova.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
